[gd_scene load_steps=3 format=3 uid="uid://e2apal1e3euw"]

[ext_resource type="Script" uid="uid://m4wiy5gj7t6w" path="res://ui/level_end_screen.gd" id="1_28q05"]
[ext_resource type="Theme" uid="uid://c3lfeadrw1cv" path="res://assets/new_theme.tres" id="1_anklu"]

[node name="LevelEndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_anklu")
script = ExtResource("1_28q05")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 40
columns = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_type_variation = &"MenuLabel"
text = "needed_time"
horizontal_alignment = 2

[node name="NeededTimeLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MenuLabel"
text = "1"

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_type_variation = &"MenuLabel"
text = "record_time"
horizontal_alignment = 2

[node name="RecordTimeLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MenuLabel"
text = "1"

[node name="Label5" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_type_variation = &"MenuLabel"
text = "needed_points"
horizontal_alignment = 2

[node name="NeededPointsLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MenuLabel"
text = "1"

[node name="Label7" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_type_variation = &"MenuLabel"
text = "record_points"
horizontal_alignment = 2

[node name="RecordPointsLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MenuLabel"
text = "1"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"MenuLabel"
text = "rewards"
horizontal_alignment = 1

[node name="Packs" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "return_to_menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
